# mcnbt

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_CN.md  README_EN.md  TODO.md  blockstate.hpp
cmake/: mcnbtConfig.cmake.in
cmake/templates/: config.hpp.in
doc/: NBT_data_of_bedrock_EN.md  NBT_data_of_bedrock_ZH.md  README_EN.md  README_ZH.md
docs/: README_CN.md  README_EN.md  Readme_CN.md
example/: CMakeLists.txt  base_example.cpp  boundary_test.cpp  de_compress_example.cpp  de_compressed_example.cpp  example.cpp  example2.cpp  fast_way_example.cpp  read_and_write_example.cpp  read_write_example.cpp  single_block_mcstructure_example.cpp  snbt_example.cpp
example/sample_data/: BigEndian_Compressed.nbt  BigEndian_Uncompressed.nbt  SNBT_With_Indent.txt
example/test_files/: BigEndian_Compressed.nbt  BigEndian_Uncompressed.nbt  LittleEndian_Compressed.nbt  LittleEndian_Uncompressed.nbt  SNBT_No_Indent.txt  SNBT_With_Indent.txt
include/: blockentity.hpp  blockstate.hpp  gzip.hpp  mcnbt.hpp  mcstructure.hpp  nbt.hpp
include/mcnbt/: blockentity.hpp  blockstate.hpp  gzip.hpp  mcnbt.hpp  mcstructure.hpp
include/mcnbt/be/: README.md  README_EN.md  block_entity.hpp  block_entitys.hpp  block_state.hpp  entity.hpp  item.hpp  mcstructure.hpp
include/mcnbt/be/block_entity/: block_entity_data.hpp  command_block_bed.hpp  structure_block_bed.hpp
include/mcnbt/be/block_entity_imp/: banner_bed.hpp  beacon_bed.hpp  beehive_and_bee_nest_bed.hpp  bell_bed.hpp  brewing_stand_bed.hpp  command_block_bed.hpp  common_block_entity_data.hpp  structure_block_bed.hpp
include/mcnbt/be/block_state/: block_state_data.hpp  command_block_bsd.hpp  structure_block_bsd.hpp
include/mcnbt/be/block_state_imp/: command_block_bsd.hpp  common_block_bsd.hpp  common_block_state_data.hpp  structure_block_bsd.hpp
include/mcnbt/be/entity_imp/: common_entity_data.hpp
include/mcnbt/be/enums/: biome.hpp  color.hpp  effect.hpp  enhance.hpp
include/mcnbt/be/item_imp/: common_item_data.hpp
mcnbt/include/: blockentity.hpp  blockstate.hpp  mcstructure.h  mcstructure.hpp  nbt.hpp
src/: blockentity.cpp  blockentity.hpp  blockstate.cpp  mcstructure.hpp  nbt.cpp
